--- a/views/pizzas.ejs
+++ b/views/pizzas.ejs
@@ -5,86 +5,25 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pizzaria Fantástica</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-	<link rel="stylesheet" href="css/index.css">
+	<link rel="stylesheet" href="/css/index.css">
 	<form action="/busca" method="get">
 		<input type="text" name="q" placeholder="Qual pizza você procura?" autocomplete="off" value="">
 		<button type="submit">Buscar</button>
 	</form>
 
 	<main>
+        <% for (p of pizzas) { %>
 		<article>
-			<img src="img/quatroqueijos.jpg" alt="Quatro Queijos">
-			<a href="pizza.html">Ver Mais</a>
+			<img src="<%=p.img%>" alt="<%=p.nome%>">
+			<a href="/pizzas/<%= p.id %>">Ver Mais</a>
 			<button>+ Add</button>
-			<div>Quatro Queijos</div>
-			<span>R$ 33,90</span>
+			<div><%=p.nome%></div>
+			<span><%=p.preco%></span>
 		</article>
-		<article>
-			<img src="img/pepperoni.jpg" alt="Pepperoni">
-			<a href="pizza.html">Ver Mais</a>
-			<button>+ Add</button>
-			<div>Pepperoni</div>
-			<span>R$ 33,90</span>
-		</article>
-		<article>
-			<img src="img/fracatu.jpg" alt="Fracatu">
-			<a href="pizza.html">Ver Mais</a>
-			<button>+ Add</button>
-			<div>Fracatu</div>
-			<span>R$ 33,90</span>
-		</article>
-		<article>
-			<img src="img/calabresa.jpg" alt="Calabresa">
-			<a href="pizza.html">Ver Mais</a>
-			<button>+ Add</button>
-			<div>Calabresa</div>
-			<span>R$ 33,90</span>
-		</article>
-		<article>
-			<img src="img/marguerita.jpg" alt="marguerita">
-			<a href="pizza.html">Ver Mais</a>
-			<button>+ Add</button>
-			<div>Marguerita</div>
-			<span>R$ 33,90</span>
-		</article>
-		<article>
-			<img src="img/quatroqueijos.jpg" alt="Quatro Queijos">
-			<a href="pizza.html">Ver Mais</a>
-			<button>+ Add</button>
-			<div>Quatro Queijos</div>
-			<span>R$ 33,90</span>
-		</article>
-		<article>
-			<img src="img/pepperoni.jpg" alt="Pepperoni">
-			<a href="pizza.html">Ver Mais</a>
-			<button>+ Add</button>
-			<div>Pepperoni</div>
-			<span>R$ 33,90</span>
-		</article>
-		<article>
-			<img src="img/fracatu.jpg" alt="Fracatu">
-			<a href="pizza.html">Ver Mais</a>
-			<button>+ Add</button>
-			<div>Fracatu</div>
-			<span>R$ 33,90</span>
-		</article>
-		<article>
-			<img src="img/calabresa.jpg" alt="Calabresa">
-			<a href="pizza.html">Ver Mais</a>
-			<button>+ Add</button>
-			<div>Calabresa</div>
-			<span>R$ 33,90</span>
-		</article>
-		<article>
-			<img src="img/marguerita.jpg" alt="marguerita">
-			<a href="pizza.html">Ver Mais</a>
-			<button>+ Add</button>
-			<div>Marguerita</div>
-			<span>R$ 33,90</span>
-		</article>
+        <% } %>
 	</main>
 
 	<!--
