--- a/views/pizzas.ejs
+++ b/views/pizzas.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<link rel="stylesheet" href="/css/index.css">
-	<form action="pizzas/busca" method="get">
+	<form action="/buscar" method="get">
 		<input type="text" name="q" placeholder="Qual pizza você procura?" autocomplete="off" value="">
 		<button type="submit">Buscar</button>
 	</form>
