--- a/views/pizzas.ejs
+++ b/views/pizzas.ejs
@@ -10,11 +10,14 @@
 <body>
 	<link rel="stylesheet" href="/css/index.css">
 	<form action="/buscar" method="get">
-		<input type="text" name="q" placeholder="Qual pizza você procura?" autocomplete="off" value="">
+		<input type="text" name="q" placeholder="Qual pizza você procura?" autocomplete="off" value="<%=busca%>">
 		<button type="submit">Buscar</button>
 	</form>
 
 	<main>
+		<% if(pizzas.length == 0) {%>
+			<div class="pizza-nao-encontrada">Nenhuma pizza encontrada. Tente ser menos específico na sua busca.</div>
+		<% } else {%>
         <% for (p of pizzas) { %>
 		<article>
 			<img src="<%=p.img%>" alt="<%=p.nome%>">
@@ -23,6 +26,7 @@
 			<div><%=p.nome%></div>
 			<span><%=p.preco%></span>
 		</article>
+        <% } %>
         <% } %>
 	</main>
 
